--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,12 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  /* background-image: url("/images/bgportrait_beach.jpg");
+  min-height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover; */
 }
 
 h1 {
