--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #d8d8d8; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,13 +25,14 @@ a:hover {
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
-  /* background-image: url("/images/bgportrait_beach.jpg");
+  /* background-color: #d8d8d8; */
+  /* min-height: 100vh; */
+  /* background-image: url("/images/bgportrait_beach.jpg"); */
   min-height: 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover; */
+  /* background-repeat: no-repeat; */
+  /* background-attachment: fixed; */
+  /* background-position: center; */
+  /* background-size: cover; */
 }
 
 h1 {
